fix(shopify): preserve token metadata ordering